chore: added sourcesInfo route with implementation and tests
